Updated backend and frontend dashboard files